# hello-sqlite

./: CMakeLists.txt  LICENSE  README.md  main.c
